fix: fixed footer spacing

--- a/assets/stylesheets/partials/footer.scss
+++ b/assets/stylesheets/partials/footer.scss
@@ -15,6 +15,7 @@ footer {
     }
   }
   & span {
+    display: inline-block;
     white-space: nowrap;
   }
 }
